# Auderset_etal_2022_nature

./: .gitignore  LICENSE  README.md  SST_vs_d15N.ipynb  categorise_by_latitude.ipynb  categorise_by_site.ipynb  d15N_gradient.ipynb  pyproject.toml  utils.py
data/gradients/: SST_LOESS_MI0pt4_RS30_BIT0pt4_RT0pt7_gradients.csv  SST_LOESS_MI0pt4_RS30_BIT0pt4_RT0pt7_high.csv  SST_LOESS_MI0pt4_RS30_BIT0pt4_RT0pt7_mid_and_low.csv  SST_LOESS_all_gradients.csv  SST_LOESS_all_high.csv  SST_LOESS_all_mid_and_low.csv  SST_filtered_MI0pt4_RS30_BIT0pt4_RT0pt7.csv  d15N_A_P_gradient.csv
data/input/: Table S1_d15N data.xlsx  Table S2_SST compilation.xlsx  d15N_A_P.csv  d15N_A_P_gradient.csv
