[tool.poetry]
name = "2021_paper_nature"
version = "0.1.0"
description = "Notebooks to support paper Enhanced ocean oxygenation during Cenozic warm periods"
authors = ["Alexandra Auderset <alexandra.auderset@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
black = "^21.12b0"
plotly = "^5.4.0"
ipykernel = "^6.6.0"
paleos = "0.1.0"
openpyxl = "^3.0.9"
nbformat = "^5.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
